syntax = "proto3";
package ksuser;

option go_package = "ksuser/pb/employees;employees";

import "users/user_message.proto";

message Employee {
  string id = 1;
  User user = 2;
  string name = 3;
  string code = 4;
  string address = 5;
  string city_id = 6;
  string city = 7;
  string province_id = 8;
  string province = 9;
  string jabatan = 10;
  string created_at =  11;
  string created_by = 12;
  string updated_at = 13;
  string updated_by = 14;
}